--- a/Results.html
+++ b/Results.html
@@ -333,10 +333,14 @@
                     <p>
                         Are you sure you wish to continue?
                     </p>
+                    <br />
+                    <div id="panelSendingToEIS" class="text-center">
+                        <i class="fa fa-cog fa-3x fa-spin"></i>
+                    </div>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-warning" data-dismiss="modal">Cancel</button>&nbsp;
-                    <a href="SentToEIS.html" class="btn btn-success"><i class="fa fa-upload"></i> Send Pre-Scores To EIS</a>
+                <div id="panelEISCommands" class="modal-footer">
+                    <button type="button" class="btn btn-warning" id="cmdEISCancel" data-dismiss="modal">Cancel</button>&nbsp;
+                    <button type='button' class="btn btn-success" id="cmdEIS"><i class="fa fa-upload"></i> Send Pre-Scores To EIS</button>
                 </div>
             </div>
         </div>
@@ -771,9 +775,33 @@
         <script src="vendor/select2/select2.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
         <!--===============================================================================================-->
+
+
+
         <script>
 
 
+            // Hide the loading cog on page load
+            $( document ).ready(function() {
+                $('#panelSendingToEIS').hide();
+            });
+
+            //Code to display animated loading of results to EIS
+            $('#cmdEIS').click(function(e) {
+                e.preventDefault();
+
+                //Show loading cog icon
+                $('#panelSendingToEIS').show();
+
+                //Hide buttons
+                $('#panelEISCommands').hide();
+
+                setTimeout(function() {
+                    window.location.href = "SentToEIS.html"; //will redirect to next step
+                }, 3000); //will call the function after 3 secs.
+
+
+            });
 
         //INSTITUTE RADAR CHART CODE AND DATA
         var ctxR = document.getElementById("radarChart").getContext('2d');
