--- a/Results.html
+++ b/Results.html
@@ -707,7 +707,7 @@
                         <div class="row">
                             <div class="col-6">
                                 <p>
-                                    <b>Criteria 6:</b> Feasibility - Perceived ability of the project team to carry out the proposed project (appropriateness of project approach and team credentials).
+                                    <b>Criteria 6: </b> Feasibility - Perceived ability of the project team to carry out the proposed project (appropriateness of project approach and team credentials).
                                 </p>
                             </div>
                             <div class="col-2">
@@ -793,7 +793,7 @@
                 //Show loading cog icon
                 $('#panelSendingToEIS').show();
 
-                //Hide buttons
+                //Hide buttons for the EIS modal
                 $('#panelEISCommands').hide();
 
                 setTimeout(function() {
