Image to jumbotron
Added an image to step 1 jumbotron

--- a/Step1.html
+++ b/Step1.html
@@ -91,7 +91,7 @@
 
 
         <!-- JUMBOTRON-->
-        <div class="jumbotron" style="padding: 2rem 2rem !important;">
+        <div class="jumbotron" style="padding: 2rem 2rem !important; background-image: url('images/meeting_bg.png'); height: 400px;">
             <h1 style="font-size: 48pt; font-family: 'Bungee Hairline', cursive;"><b>Welcome to ARIA*!</b></h1>
             <p class="lead">
                 ARIA allows CIHR Program Staff to select a grant competition group and pre-rank the applications for Peer Reviewers using Artificial Intelligence.
@@ -133,7 +133,7 @@
                         <div class="col">
                             <label for="ddCompetition">Competition</label>
                             <select class="form-control" id="ddCompetition">
-                                    <option></option>
+                                    <option>- Select Competition -</option>
                                     <option>Travel Awards: 2019 - Summer</option>
                                     <option>Travel Awards: 2019 - Winter</option>
                                   </select>
