--- a/index.html
+++ b/index.html
@@ -44,25 +44,25 @@
                 </div>
 
                 <form class="login100-form validate-form">
-                    <h1 style="font-size: 56pt; font-family: 'Bungee Hairline', cursive;">ARIA*</h1>
-                    <h4 style="font-family: 'Bungee Hairline', cursive; ">Artificial Reviewer Intelligent Assessor</h4>
+                    <h1 style="font-size: 56pt; font-family: 'Bungee Hairline';">ARIA*</h1>
+                    <h4 style="font-family: 'Bungee Hairline';">Artificial Reviewer Intelligent Assessor</h4>
 
 
                     <hr />
 
-                    <div class="wrap-input100 validate-input ">
-                        <input class="input100 " type="text " name="networkID " placeholder="Network ID ">
-                        <span class="focus-input100 "></span>
-                        <span class="symbol-input100 ">
-							<i class="fa fa-user " aria-hidden="true "></i>
+                    <div class="wrap-input100 validate-input">
+                        <input class="input100 " type="text" name="networkID" placeholder="Network ID ">
+                        <span class="focus-input100"></span>
+                        <span class="symbol-input100">
+							<i class="fa fa-user" aria-hidden="true"></i>
 						</span>
                     </div>
 
-                    <div class="wrap-input100 validate-input " data-validate="Password is required ">
-                        <input class="input100 " type="password " name="pass " placeholder="Password ">
+                    <div class="wrap-input100 validate-input" data-validate="Password is required ">
+                        <input class="input100" type="password" name="pass" placeholder="Password ">
                         <span class="focus-input100 "></span>
                         <span class="symbol-input100 ">
-							<i class="fa fa-lock " aria-hidden="true "></i>
+							<i class="fa fa-lock" aria-hidden="true "></i>
 						</span>
                     </div>
 
