--- a/Step2.html
+++ b/Step2.html
@@ -273,7 +273,7 @@
                 <!-- ACTION BUTTONS-->
                 <div class="row">
                     <div class="col">
-                        <a class="btn btn-info float-left" style="color: white;" href="_data/inputdata.html" target="_blank"><i class="fa fa-database"></i> View Source Data</a>
+                        <a class="btn btn-info float-left" style="color: white;" href="app_data/inputdata.html" target="_blank"><i class="fa fa-database"></i> View Source Data</a>
                     </div>
                     <div class="col">
                         <a id="generateRanking" class="btn btn-success btn-lg float-right" style="color: white!important;" data-toggle="modal" data-target="#modalRanking" href="#"><i class="fa fa-list-ol"></i> Generate Pre-Ranking</a>
