--- a/Step1.html
+++ b/Step1.html
@@ -91,13 +91,12 @@
 
 
         <!-- JUMBOTRON-->
-        <div class="jumbotron" style="padding: 2rem 2rem !important; background-image: url('images/meeting_bg.png'); height: 400px;">
+        <div class="jumbotron" style="padding: 2rem 2rem !important; background-image: url('images/meeting_bg.png'); height: 435px;">
             <h1 style="font-size: 48pt; font-family: 'Bungee Hairline', cursive;"><b>Welcome to ARIA*!</b></h1>
             <p class="lead">
                 ARIA allows CIHR Program Staff to select a grant competition group and pre-rank the applications for Peer Reviewers using Artificial Intelligence.
 
 
-                <br />
                 <a class="btn btn-info float-right" href="#" role="button" data-toggle="modal" data-target="#modalLearnMore"><i class="fa fa-lightbulb-o"></i> Learn more</a>
                 <br />
             </p>
@@ -107,19 +106,19 @@
         <!-- STEP 1 -->
 
         <div class="row">
-            <div class="col-2">
+            <div class="col-md-2 col-lg-2 col-sm-12">
                 <h2>Step 1</h2>
                 <br />
                 <p>To begin, select the open Program and Competition to Pre-Rank the applications within that group. The applications that are top ranked will be sent to Peer Reviewers to prioritize the applications they review.</p>
             </div>
 
-            <div class="col-10">
+            <div class="col-md-10 col-lg-10 col-sm-12">
 
                 <br />
 
                 <form>
                     <div class="row">
-                        <div class="col">
+                        <div class="col-sm-12 col-md-6 col-lg-6">
                             <label for="ddProgram">Program</label>
                             <select class="form-control" id="ddProgram">
                                     <option>- Select Program - </option>
@@ -130,7 +129,7 @@
                                     <option>Other</option>
                                   </select>
                         </div>
-                        <div class="col">
+                        <div class="col-sm-12 col-md-6 col-lg-6">
                             <label for="ddCompetition">Competition</label>
                             <select class="form-control" id="ddCompetition">
                                     <option>- Select Competition -</option>
@@ -144,8 +143,11 @@
                 </form>
 
                 <div class="row">
-                    <div class="col">
-                        <a id="nextButton" class="btn btn-primary btn-lg float-right" style="color: white!important;" href="#" data-toggle="modal" data-target="#modalLoading">Next >></a>
+                    <div class="col-md-10 col-lg-10 col-xl-10 col-sm-12"></div>
+                    <div class="col-md-2 col-lg-2 col-xl-2 col-sm-12">
+                        <a id="nextButton" class="btn btn-primary btn-block float-right" style="color: white!important;" href="#" data-toggle="modal" data-target="#modalLoading">Next >></a>
+                        <br />
+                        <br />
                     </div>
                 </div>
 
