--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
 <body>
 
     <div class="limiter">
+        <img src="https://cihr-irsc.gc.ca/images/logo-cihr-colour-en.jpg" class="img-fluid">
         <div class="container-gradient align-content-center">
 
             <div class="wrap-login100">
 
                 <div class="login100-pic">
 
-                    <img src="https://cihr-irsc.gc.ca/images/leaf-cihr-colour-en.jpg" alt="IMG">
+                    <img src="https://cihr-irsc.gc.ca/images/leaf-cihr-colour-en.jpg" alt="IMG" />
 
 
 
