--- a/SentToEIS.html
+++ b/SentToEIS.html
@@ -29,7 +29,7 @@
 <body>
 
     <!-- Top Nav Menu -->
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white">
         <a class="navbar-brand" href="#">
             <img src="https://cihr-irsc.gc.ca/images/leaf-cihr-colour-portrait-en.jpg" height="60px">
         </a>
