Polished login page, language toggle

--- a/Step1.html
+++ b/Step1.html
@@ -96,9 +96,17 @@
             <p class="lead">
                 ARIA allows CIHR Program Staff to select a grant competition group and pre-rank the applications for Peer Reviewers using Artificial Intelligence.
 
-
                 <a class="btn btn-info float-right" href="#" role="button" data-toggle="modal" data-target="#modalLearnMore"><i class="fa fa-lightbulb-o"></i> Learn more</a>
                 <br />
+            </p>
+            <br />
+            <br />
+            <br />
+            <p class="h2" style="font-family: 'Bungee Hairline';">
+                <u>A</u>rtificial<br />
+                <u>R</u>eviewer<br />
+                <u>I</u>ntelligent
+                <br /> <u>A</u>ssistant
             </p>
         </div>
 
