--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
 
             <div class="wrap-login100">
 
-                <div class="login100-pic">
+                <div class="login100-pic text-center">
 
-                    <img src="https://cihr-irsc.gc.ca/images/leaf-cihr-colour-en.jpg" alt="IMG" />
+                    <img src="https://cihr-irsc.gc.ca/images/leaf-cihr-colour-en.jpg" alt="IMG" class="img-fluid" />
 
-
-
+                    <hr />
+                    <div class="display-5-heading">
+                        <a href="#" class="display-5-heading">English</a> | <a href="#" class="display-5-heading">Fran&ccedil;ais</a>
+                    </div>
                 </div>
 
                 <form class="login100-form validate-form">
@@ -68,7 +70,7 @@
                     </div>
 
                     <div class="container-login100-form-btn ">
-                        <a href="Step1.html " class="btn container-login100-form-btn ">Login</a>
+                        <a href="Step1.html " class="btn btn-success btn-block">Login</a>
 
                     </div>
 
