Fixed responsiveness on step 1

--- a/Step1.html
+++ b/Step1.html
@@ -102,7 +102,7 @@
             <br />
             <br />
             <br />
-            <p class="h2" style="font-family: 'Bungee Hairline';">
+            <p class="h2 d-none d-md-inline d-lg-inline d-xl-inline" style="font-family: 'Bungee Hairline';">
                 <u>A</u>rtificial<br />
                 <u>R</u>eviewer<br />
                 <u>I</u>ntelligent
