testing git integration in host

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                 <form class="login100-form validate-form">
                     <h1 style="font-size: 56pt; font-family: 'Bungee Hairline';">ARIA*</h1>
-                    <h4 style="font-family: 'Bungee Hairline';">Artificial Reviewer Intelligent Assessor</h4>
+                    <h4 style="font-family: 'Bungee Hairline';">Artificial Reviewer Intelligent Assessor***</h4>
 
 
                     <hr />
