Reverted back to html

--- a/Results.html
+++ b/Results.html
@@ -40,7 +40,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="Step1.php">
+                    <a class="nav-link" href="Step1.html">
                         Home
                         <span class="sr-only">(current)</span></a>
                 </li>
@@ -75,7 +75,7 @@
                                     <li class="list-group-item">
                                         <a href="#" class="card-link"><i class="fa fa-language"></i> Fran&ccedil;ais</a>
                                     </li>
-                                    <li class="list-group-item"><a href="index.php" class="card-link"><i class="fa fa-sign-out"></i> Logout</a></li>
+                                    <li class="list-group-item"><a href="index.html" class="card-link"><i class="fa fa-sign-out"></i> Logout</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -209,7 +209,7 @@
                     <a class="btn btn-secondary btn-block btn-sm" href="#" data-toggle="modal" data-target="#modalCriteria"><i class="fa fa-check-square"></i> Evaluation Criteria</a>
 
 
-                    <a class="btn btn-secondary btn-block btn-sm" style="color: white!important;" href="Step1.php">
+                    <a class="btn btn-secondary btn-block btn-sm" style="color: white!important;" href="Step1.html">
                         <i class="fa fa-undo"></i> Start Again</a>
                 </p>
             </div>
@@ -802,7 +802,7 @@
                 $('#panelEISCommands').hide();
 
                 setTimeout(function() {
-                    window.location.href = "SentToEIS.php"; //will redirect to next step
+                    window.location.href = "SentToEIS.html"; //will redirect to next step
                 }, 3000); //will call the function after 3 secs.
 
 
