--- a/Step2.html
+++ b/Step2.html
@@ -40,7 +40,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="Step1.php">
+                    <a class="nav-link" href="Step1.html">
                         Home
                         <span class="sr-only">(current)</span></a>
                 </li>
@@ -78,7 +78,7 @@
                                     <li class="list-group-item">
                                         <a href="#" class="card-link"><i class="fa fa-language"></i> Fran&ccedil;ais</a>
                                     </li>
-                                    <li class="list-group-item"><a href="index.php" class="card-link"><i class="fa fa-sign-out"></i> Logout</a></li>
+                                    <li class="list-group-item"><a href="index.html" class="card-link"><i class="fa fa-sign-out"></i> Logout</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -207,7 +207,7 @@
                 </p>
 
                 <p class="text-center">
-                    <a class="btn btn-secondary btn-sm btn-block" style="color: white!important;" href="Step1.php">
+                    <a class="btn btn-secondary btn-sm btn-block" style="color: white!important;" href="Step1.html">
                         <i class="fa fa-undo"></i> Start Again</a>
                 </p>
             </div>
@@ -355,7 +355,7 @@
             e.preventDefault();
 
             setTimeout(function() {
-                window.location.href = "Results.php"; //will redirect to results page
+                window.location.href = "Results.html"; //will redirect to results page
             }, 4500); //will call the function after 4.5 secs.
 
 
