--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <div class="display-5-heading">
                         <a href="#" class="display-5-heading">English</a> | <a href="#" class="display-5-heading">Fran&ccedil;ais</a>
                     </div>
-        
+
                 </div>
 
                 <form class="login100-form validate-form">
@@ -71,7 +71,7 @@
                     </div>
 
                     <div class="container-login100-form-btn ">
-                        <a href="Step1.php" class="btn btn-success btn-block">Login</a>
+                        <a href="Step1.html" class="btn btn-success btn-block">Login</a>
 
                     </div>
 
